--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="mobile">
             <div id="tille">
               <div id="logo">
-                <img src="new-instagram-logo-new-look-designboom-01.webp" alt="" srcset="">
+                <a href="index.html"><img src="new-instagram-logo-new-look-designboom-01.webp" alt="" srcset=""></a>
               </div> 
               <div id="search">
                 <input type="search" name="" placeholder="search" id="">
@@ -41,7 +41,7 @@
          <div class="cricle-1">
             <img src="https://images.unsplash.com/photo-1584339312444-6952d098e152?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aXNsYW1pYyUyMGdpcmx8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60" alt="" srcset="">
         </div>
-        <h1>fatima majeed</h1>
+        <h1>fatima Shah</h1>
             
          <div id="box-1">
              <img src="https://source.unsplash.com/200x200/? islamic gril" alt="" srcset="">
